# dataclass-mapper

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  mypy.ini  pyproject.toml  unittest.cfg
.github/workflows/: build.yaml  ci.yaml  publish.yaml
datamap/: converters.py  decorators.py  dicts.py  time.py  version.py
datamapper/: converters.py  decorators.py  dicts.py  version.py
docs/: Makefile  api.rst  conf.py  index.rst  quickstart.rst
docs/develop/: features.rst  getting-started.rst  introduction.rst
tasks/: quality.py  test.py
tests/unit/: conftest.py  test_converters.py  test_decorators.py  test_dicts.py  test_time.py  test_version.py
tests/unit/fixtures/: date_attributes.py  mentions.py  tags.py  user.py
